tried to align correct/incorrect to center via bootstrap, style.css, and within javascript.nothing worked

--- a/assets/style.css
+++ b/assets/style.css
@@ -2,3 +2,8 @@
     padding : 2rem;
     margin-top: 2rem;
 }
+h3 {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+}
